@@ -81,7 +81,7 @@ public:
 	Q_SIGNAL void posChanged( int pos );
 	Q_SIGNAL void seeked( int pos );
 
-	bool run( const QString &, const QString &args = QString() );
+	bool run( const QString &command, const QString &args = QString() );
 
 	void log( const QString &, int logFlags = ErrorLog );
 	inline void logInfo( const QString &txt, const bool showInGUI = true, const bool logOnce = false )
