@@ -3,6 +3,7 @@ Zmiany w QMPlay2 build 14.12.23:
 	- możliwość przewijania do tyłu w strumieniach sieciowych bez ponownego łączenia się z serwerem,
 	- MPRIS2 obsługuje już nazwy utworów nawet gdy nie zawierają one tytułu,
 	- usunięta możliwość aktualizacji w systemach innych niż Windows,
+	- automatyczna aktualizacja programu "youtube-dl",
 	- drobne poprawki wyszukiwania w YouTube,
 	- dodany cache do klasy ustawień,
 	- usprawnienie buforowania,
